# anomaly-llm-study

./: .gitignore  .gitmodules  DATA_LICENSES.md  FLEET.md  GATE_SPEC.md  Makefile  PLAN.md  POSTMORTEM.md  README.md  ROADMAP.md  RUNLOG.md  project_idea.md  pyproject.toml
anodet/: __init__.py  _fork.py
anodet/analysis/: __init__.py  aggregate.py  figures.py  stats.py
anodet/baselines/: __init__.py  classical.py
anodet/data/: creditcard.py  hparams.py  odds.py  odds_names.py  serialize.py  unsw.py
anodet/eval/: __init__.py  exp1.py  exp2.py  exp3_security.py  exp3b_names.py  exp4_serialization.py  grid.py  verdict.py
anodet/metrics/: __init__.py  metrics.py
anodet/scoring/: __init__.py  likelihood.py  prompted.py
anodet/triage/: two_stage.py
anodet/utils/: __init__.py  io.py
configs/: anollm_hparams.yaml  anollm_reference.yaml  exp2.yaml  qwen_hparams.yaml
configs/experiment/: exp2_odds.example.yaml
paper/: 01_intro.md  02_related_work.md  03_method.md  README.md
scripts/: KAGGLE.md  exp2_fleet.py  fetch_special_datasets.sh  fleet_pull.sh  fleet_status.sh  fleet_watch.sh  kaggle_gate.py  make_figures.py  make_tables.py  pod_bootstrap.sh  smoke_exp1.py  smoke_pipeline.py
src/data/: __init__.py
src/eval/: grid.py
src/metrics/: metrics.py
src/triage/: __init__.py
tests/: test_aggregate.py  test_determinism.py  test_exp2_and_baselines.py  test_exp2_fleet.py  test_exp3456.py  test_grid.py  test_hparams_precision.py  test_metrics.py  test_prompted_oom.py  test_prompted_score.py  test_security_loaders.py  test_stats_figures.py  test_verdict.py
(+3 files in other folders)
